css/demo.css
/* ... */
.image-container{
    position: relative;
    margin-bottom: 7px;
    width: 100%;
    height: 278px;
    cursor: pointer;
    -ms-touch-action: manipulation; /* IE10  */
    touch-action: manipulation;
}
.hover1 {
    pointer-events: none;
    opacity: 0;
}
.image-container .background-image{
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    -webkit-transition: all .2s;
    transition: all .2s;
}
.hover{
    transition: all .4s;
    position: absolute;
    top: 0;
    opacity: 0;
}
.team-container .image-container:hover .background-image.hover {
    opacity: 1;
    cursor: pointer;
    -ms-touch-action: manipulation; /* IE10  */
    touch-action: manipulation;
}
.team-name-head {
    padding: 0;
    margin-bottom: 9px;
}
.team-name {
    padding-top: 34px;
    position: static;
    padding-bottom: 6px;
    border-bottom-left-radius: 19px;
    border-bottom-right-radius: 19px;
}
.service-section-content {
    padding-top: 70px;
    padding-bottom: 15px;
    border-style: none;
    border-bottom-left-radius: 25px;
    border-bottom-right-radius: 25px;
}
.servicer-section-content{
    height: 230px;
}
.service-content-row1 {
    height: 598px;
}
.service-content-row2 {
    height: 476px;
}
.service-content-row3 {
    height: 455px;
    width:100px;
}
.service-content-row4 {
    height: 224px;
}
.banner .content .main-heading-inner {
    margin-bottom: 25px;
}
.banner .content {
    margin-bottom: 0px;
    padding-top: 50px;
}
.flex-center {
    display: flex;
    justify-content: center;
    align-items: center;
}
.footer-image li:hover{
    opacity: 1;
}
.footer-image li:hover::after{
    background: rgba(255, 233, 233, 0);
}
.team-section-img .team-img2{
    opacity: 0;
    position: absolute;
    top: 12px;
    width: 330px;
    height: 291px;
}
.team-container:hover {
    cursor: pointer;
}
.service-section-content{
    margin-top: -95px;
    border-radius: 0px;
    padding-top: 70px;
    padding-bottom: 15px;
    border-style: none;
    border-bottom-left-radius: 25px;
    border-bottom-right-radius: 25px;
}
.team-container:hover .image-container .background-image.hover {
    opacity: 1;
    cursor: pointer;
}
.hover-toggle {
    opacity: 1;
}
.team-container .image-container:hover .background-image.hover{
    opacity: 1;
    cursor: pointer;
}
.general-team {
    min-height: 500px;
    background-image: url(../images/parallex/teamTop1.jpg);
    position: relative;
    width: 100%;
}
.footer-image {
    background-attachment: fixed;
    background: url(../images/footer/CollageTeam.jpg);
    position: relative;
    background-size: cover;
    width: 100%;
    height: 101%;
}
.gap{
    padding:40px;
}

/*--------------------------------------privacy policy css--------------------------------*/
.privacy-policy:hover {
    color: #fff;
}
.privacy-policy {
    color: #dbdbdb;
    text-decoration: underline;
}
.privacy-link {
    color: #c12e2a;
    text-decoration: none;
}
.privacy-link:hover {
    color: #5f5f5f;
}
.privacy-img {
    min-height: 400px;
    background-image: url("../images/innerpages/privacy.jpg");
}

/*--------------------- loader css starts--------------------------------------- */
.loading {
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    position: fixed;
    display: block;
    opacity: 0.999;
    background-color: #fff;
    z-index: 99999;
    text-align: center;
}
h1.loader-pepcus {
    position: absolute;
    color: rgba(0, 0, 0, .5);
    font-size: 5em;
    top: 55%;
    left: 50%;
    margin-left: -110px;
}
h1.loader-pepcus:before {
    content: attr(data-text);
    position: absolute;
    overflow: hidden;
    max-width: 7em;
    white-space: nowrap;
    color: #ff0000;
    animation: loading 8s linear;
}
@keyframes loading {
    0% {
        max-width: 0;
    }
}
.loading-image img {
    width: 100px;
}
.loading-image {
    display: block;
    position: absolute;
    left: 50%;
    top: 50%;
    margin-left: -50px;
    margin-top: -50px;
}
@-webkit-keyframes spin {
    0%   {
        -webkit-transform: rotate(0deg);
        -ms-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
        -ms-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}
@keyframes spin {
    0%   {
        -webkit-transform: rotate(0deg);
        -ms-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
        -ms-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}

/*------------------------------scroll top css starts ---------------------------------*/
.scrollup {
    width: 20px;
    height: 30px;
    position: fixed;
    bottom: 50px;
    right: 100px;
    text-align: center;
    display: none;
    z-index: 9;
}
.arrow-up-icon{
    padding: 15px 7px;
    background: rgba(197,64,65,0.7);
    border-radius: 30px;
    color: #fff;
}
.scrollup:hover .arrow-up-icon, .arrow-up-icon:hover{
    background: rgba(197,64,65,1);
}


/*----------------------------------------banner images css------------------------------*/
.general-img {
    min-height: 400px;
    background-image: url("../images/parallex/general1.jpg");
}
.strength-img {
    min-height: 400px;
    background-image: url("../images/innerpages/strength.jpg");
}
.cwd-img {
    min-height: 400px;
    background-image: url("../images/innerpages/cwd.jpg");
}
.sta-img {
    min-height: 400px;
    background-image: url("../images/innerpages/sta.jpg");
}
.sm-img {
    min-height: 400px;
    background-image: url("../images/innerpages/sm.jpg");
}
.mobile-img {
    min-height: 400px;
    background-image: url("../images/innerpages/mobile.jpg");
}
.startup-img {
    min-height: 400px;
    background-image: url("../images/innerpages/startup.jpg");
}
.op-img {
    min-height: 400px;
    background-image: url("../images/innerpages/op.jpg");
}
/* ... */

